<resources>
    <string name="app_name">Nabeul Transport</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Bonjourfragment</string>
    <string name="nav_header_title">Nom d\'utilisateur</string>
    <string name="nav_header_subtitle">E-mail</string>
    <string name="nav_header_desc">En-tête de navigation</string>

    <string name="navigation_drawer_open">Ouvrir le tiroir de navigation</string>
    <string name="navigation_drawer_close">Fermer le tiroir de navigation</string>
    <string name="action_settings">Réglages</string>
    <string name="action_agences">Acceuil</string>
    <string name="action_Signout">Se déconnecter</string>
    <string name="tab_text_1">NORMAL</string>
    <string name="tab_text_2">CONFORT</string>
    <string name="type_bus">TYPE DE BUS</string>
    <string name="about_description" >version:1.0.0\nDSI 31 Group 13\ncopyright © 2019&#8211;2020\nAll rights reserved</string>
<!-- Navigation drawer items -->
    <string name="s_authentifier">S\'authentifier</string>
    <string name="demande_de_location_du_bus">Demande de location du bus</string>
    <string name="mes_reservations">Mes Reservations</string>
    <string name="a_propos">A Propos</string>
    <string name="d_connexion">Déconnexion</string>
    <string name="Settings">Settings</string>

<!-- personne_physique layout -->
    <string name="cin">CIN</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prenom</string>
    <string name="adresse">Adresse</string>
    <string name="confirmer">Confirmer</string>
    <string name="title_activity_setting">parameters</string>
    <string name="settings_text_select_theme">Select Theme:</string>

    <string-array name="theme_array">

        <item>Material-Light</item>

        <item>Material-Dark</item>

    </string-array>
</resources>