<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sign_up"
            android:icon="@drawable/ic_sign_up"
            android:title="@string/s_authentifier" />

        <item
            android:id="@+id/nav_demande_location_bus"
            android:icon="@drawable/ic_bus_location"
            android:title="@string/demande_de_location_du_bus" />

        <item
            android:id="@+id/nav_reservation"
            android:icon="@drawable/ic_reservation"
            android:title="@string/mes_reservations" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/a_propos" />
        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/ic_log_out"
            android:title="@string/d_connexion" />

    </group>
</menu>